[tool.poetry]
name = "selenium-example"
version = "0.1.0"
description = ""
authors = ["Aviad Rozenhek <aviadr1@gmail.com>"]
readme = "README.md"
packages = [{include = "selenium_example"}]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.6.1"
selenium = "^4.8.2"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
